--- a/app/views/filters.html
+++ b/app/views/filters.html
@@ -18,7 +18,7 @@
     <div class="column-two-thirds">
 
       <h1 class="heading-xlarge">
-        Find a {{ lotName }} service
+        Enter your {{ lotName }} requirements
       </h1>
 
     </div>
@@ -44,13 +44,18 @@
       <div class='column-two-thirds'>
 
         {% for item in section %}
-          <div class='filter-group'>
-            <div class='filter-control' data-target="{{ item.sectionId }}">
-              <h3 class='heading-medium'>
+            <div class='filter-control' data-target="{{ item.sectionId }}" data-target="plus-{{ item.sectionId }}">
+              <div class='plus' id="plus-{{ item.sectionId }}">
+                +
+              </div>
+              <div class='plus js-hidden' id="minus-{{ item.sectionId }}">
+                –
+              </div>
+              <h3 class='heading-medium' data-target="{{ item.sectionId }}">
                 {{ item.sectionName }}
               </h3>
             </div>
-            <fieldset class="form-group js-hidden" id="{{ item.sectionId }}">
+            <div class="form-group js-hidden" id="{{ item.sectionId }}">
               {% for category in item.primaryCategories %}
               <label class="block-label" for="{{ category.id }}" data-target="subcategories_of_{{ category.id }}">
                 <input type="{{ item.selectionType }}" name="{{ item.sectionName }}" value="{{ category.id }}" id="{{ category.id }}">
@@ -58,6 +63,7 @@
               </label>
               {% if category.subCategories %}
                 <div class="panel panel-border-narrow js-hidden" id="subcategories_of_{{ category.id }}">
+                  <h4 class='heading-small'>{{ category.subCategoryTitle }}</h4>
                   {% for subcategory in category.subCategories %}
                       <label for="{{ subcategory.id }}" class="block-label block-label">
                         <input type="{{ category.subCategorySelectionType }}" name="{{ subcategory.name }}" value="true" id="{{ subcategory.id }}">
@@ -67,8 +73,7 @@
                 </div>
               {% endif %}
             {% endfor %}
-          </fieldset>
-        </div>
+          </div>
       {% endfor %}
 
       </div>
