--- a/app/assets/sass/catalogue.scss
+++ b/app/assets/sass/catalogue.scss
@@ -2,6 +2,7 @@
 .primary-category {
   li {
     margin-top: 20px;
+    margin-bottom: 20px;
     a {
       @include core-24;
       font-weight: bold;
@@ -33,13 +34,13 @@
   padding-bottom: 20px;
 }
 
-
 .filter-control {
   padding-top: 20px;
-  border-bottom: 1px solid $border-colour;
+  padding-bottom: 20px;
   display: block;
   .heading-medium {
     margin-top: 0px;
+    margin-bottom: 0px;
     color: $link-colour;
   }
   &:hover {
@@ -54,16 +55,64 @@
   }
 }
 
-.filter-group {
 
+.section {
+  border-bottom: 1px solid $border-colour;
 }
 
 .form-group {
   margin-top: 20px;
+  float: none;
+}
+
+.service-listing {
+  border-bottom: 1px solid $border-colour;
+  margin-top: 13px;
+  margin-bottom: 20px;
+  padding-bottom: 10px;
+  p {
+    @include core-16;
+  }
+  a {
+    text-decoration: none;
+  }
+  h3 {
+    @include heading-24;
+    font-weight: bold;
+  }
+  h4 {
+    padding-bottom: 10px;
+  }
+}
+
+.help {
+  border-top: 1px solid $border-colour;
 }
 
 
-  
-.filter-feedback {
+.bullet-list {
+  list-style: disc;
+  padding-left: 20px;
+}
 
+.tertiary-section {
+  h4, p, .bullet-list {
+    @include core-16;
+  }
+  h4 {
+    font-weight: bold;
+  }
+  ul {
+    padding-bottom: 20px;
+  }
+}
+
+
+.price {
+  @include heading-24;
+  font-weight: bold;
+}
+
+.document-list {
+  padding-bottom: 10px;
 }
