--- a/app/views/service-page.html
+++ b/app/views/service-page.html
@@ -66,7 +66,7 @@ Digital Marketplace prototype
             <h4 class=''>{{ section3.name }}:</h4>
             {% if section3.type == 'paragraph' %}
               <p class=''>{{ section3.content }}</p>
-            {% else %}
+            {% elif section3.type == 'list' %}
               <ul class='bullet-list'>
                 {% for section4 in section3.content %}
                 <li>{{ section4 }}</li>
@@ -100,6 +100,7 @@ Digital Marketplace prototype
           <li>{{ details }}</li>
         </ul>
       {% endfor %}
+        <a href='mailto:{{ services[service].contactemail }}'>{{ services[service].contactemail }}</a>
     </div>
   </div>
 </main>
