Create GCloud9 Service page

--- a/app/assets/sass/catalogue.scss
+++ b/app/assets/sass/catalogue.scss
@@ -116,3 +116,20 @@
 .document-list {
   padding-bottom: 10px;
 }
+// For example
+.first-layer {
+  border-left: 5px solid navy;
+  padding-left: 10px;
+}
+.second-layer {
+  border-left: 5px solid mediumblue;
+  padding-left: 10px;
+}
+.third-layer {
+  border-left: 5px solid mediumslateblue;
+  padding-left: 10px;
+}
+.fourth-layer {
+  border-left: 5px solid cornflowerblue;
+  padding-left: 10px;
+}
